cambio nombre de una linea

--- a/Paginaweb 1/index.html
+++ b/Paginaweb 1/index.html
@@ -17,7 +17,7 @@
 
         <div class="enlaces">
             <a class="enlace" href="Nuestroequipo.html">Nuestro Equipo</a>
-            <a class="enlace" href="Servicios.html">Servicios</a>
+            <a class="enlace" href="Servicios.html">Nuestros Servicios</a>
             <a class="enlace" href="Contacto.html">Contacto</a>
         </div>
     </div>
