--- a/Paginaweb 1/Contacto.html
+++ b/Paginaweb 1/Contacto.html
@@ -18,7 +18,7 @@
         <div class="enlaces">
             <a class="enlace" href="index.html">Inicio</a>
             <a class="enlace" href="Nuestroequipo.html">Nuestro Equipo</a>
-            <a class="enlace" href="Servicios.html">Servicios</a>
+            <a class="enlace" href="Servicios.html"> Nuestros Servicios</a>
         </div>
     </div>
     </header>
