Cambio en el footer

--- a/Paginaweb 1/Contacto.html
+++ b/Paginaweb 1/Contacto.html
@@ -55,7 +55,7 @@
     <div class="footer-links">
       <ul>
         <li><a href="Index.html">Inicio</a></li>
-        <li><a href="Servicios.html">Servicios</a></li>
+        <li><a href="Servicios.html"> Nuestros Servicios</a></li>
         <li><a href="Nuestroequipo.html">Nuestro Equipo</a></li>
         <li><a href="Blog.html">Blog</a></li>
       </ul>
