Segundo cambio del footer

--- a/Paginaweb 1/Contacto.html
+++ b/Paginaweb 1/Contacto.html
@@ -57,12 +57,12 @@
         <li><a href="Index.html">Inicio</a></li>
         <li><a href="Servicios.html"> Nuestros Servicios</a></li>
         <li><a href="Nuestroequipo.html">Nuestro Equipo</a></li>
-        <li><a href="Blog.html">Blog</a></li>
+        <li><a href="Blog.html">Mi Blog</a></li>
       </ul>
     </div>
     <div class="footer-contact">
       <p>Contacto:</p>
-      <p>Email: eltallerqkieres@gmail.com</p>
+      <p>Email: eltallerqkieresmasquenadie@gmail.com</p>
       <p>Teléfono: +34 654879521</p>
     </div>
     <div class="footer-social">
