li cambios ramdon

--- a/Paginaweb 1/Contacto.html
+++ b/Paginaweb 1/Contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contacto - CARDIRECT</title>
+    <title>Preuba de Jose - CARDIRECT</title>
     <link rel="stylesheet" type="text/css" href="taller.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <img class="logo" src="logotaller.png" alt="Logo de la marca">
         
 
-        <h1 class="titulo">CARDIRECT</h1>
+        <h1 class="titulo">Jose</h1>
 
         <div class="enlaces">
             <a class="enlace" href="index.html">Inicio</a>
@@ -23,19 +23,10 @@
     </div>
     </header>
  <main>
-        <h1>Contacto</h1>
+        <h1>Prueba</h1>
         <p>Estamos aquí para ayudarte. Por favor, completa el formulario y nos pondremos en contacto contigo pronto.</p>
 
-        <form action="procesar.php" method="post" class="formulario-contacto">
-            <div class="campo">
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre" required>
-            </div>
-
-            <div class="campo">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
+       
 
             <div class="campo">
                 <label for="mensaje">Mensaje:</label>
@@ -54,10 +45,10 @@
     </div>
     <div class="footer-links">
       <ul>
-        <li><a href="Index.html">Inicio</a></li>
-        <li><a href="Servicios.html">Servicios</a></li>
-        <li><a href="Nuestroequipo.html">Nuestro Equipo</a></li>
-        <li><a href="Blog.html">Blog</a></li>
+        <li><a href="Index.html">final</a></li>
+        <li><a href="Servicios.html">coche</a></li>
+        <li><a href="Nuestroequipo.html">rueda Equipo</a></li>
+        <li><a href="Blog.html">movil</a></li>
       </ul>
     </div>
     <div class="footer-contact">
