cambio en blog titulo y h1

--- a/Paginaweb 1/Blog.html
+++ b/Paginaweb 1/Blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blog - CARDIRECT</title>
+    <title>perro - movistar</title>
     <link rel="stylesheet" type="text/css" href="taller.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <img class="logo" src="logotaller.png" alt="Logo de la marca">
         
 
-        <h1 class="titulo">CARDIRECT</h1>
+        <h1 class="titulo">movistar</h1>
 
         <div class="enlaces">
             <a class="enlace" href="index.html">Inicio</a>
